--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
                   <id>JFrog</id>
                   <name>JFrog</name>
                   <url>http://localhost:8040/artifactory/example-repo-local/</url>
+          </repository>
+  </distributionManagement>       
   <prerequisites>
     <maven>3.0.3</maven>
   </prerequisites>
